--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
         <link rel="icon" href="data:;base64,=" />
     </head>
     <body>
+
+       
+
         <div class="container">
-            <h1>Games</h1>
-
-            </div>
-
-            <div class="results">
-                <div class="loader"></div>
-            </div>
+            <h1>Games</h1> 
         </div>
+
+        <div class="loader"> 
+        </div>
+
+
+        
         <script src="js/question-1.js"></script>
         <script src="js/question-2.js"></script>
     </body>
